# bili-down

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  PRD-bili-finance-transcriber.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/bili_text/: __init__.py  audio.py  bilibili.py  cli.py  config.py  deps.py  fakes.py  interfaces.py  markdown.py  models.py  orchestrator.py  startup.py  storage.py  summarization.py  transcription.py
tests/: test_acceptance.py  test_audio.py  test_bilibili.py  test_cli.py  test_config.py  test_markdown.py  test_orchestrator.py  test_startup.py  test_storage.py  test_summarization.py  test_transcription.py
