[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bili-text"
version = "0.1.0"
description = "macOS CLI that transcribes and summarizes the latest video of Bilibili finance creators."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "dashscope>=1.20.0",
    "minio>=7.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
bili-text = "bili_text.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bili_text"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
